# vulkan

./: .gitignore  .gitmodules  Cargo.toml  build.sh  build.zig  builder.zig  readme.md  vulkan.nimble
C/: .gitmodules  confy.nims  cvk.nimble  entry.c  readme.md
C/cdk/: mem.h  sys.h
C/examples/: e00_hellowindow.c  e01_hellovulkan.c
C/src/: build.nim  cfg.h  cvk.h  elements.h  entry.c  libs.h
C/vulkan/: cfg.h  elements.h
butcher/: Cargo.toml  build.old.zig  build.old.zig.zon
butcher/C/: entry.c
butcher/cpp/: build.nim  vkp.cpp
butcher/nim/: nvk.nim
butcher/vkp/: .gitmodules  vkp.nimble
butcher/zig/: build.nims  triangle.old.zig  triangle.zig
c/: cmem.c  cmem.h  cstd.c  cstd.h  cstr.c  cstr.h  csys.c  csys.h  cvk.c  cvk.h  entry.c
c/cvk/: cfg.c  debug.c  device.c  instance.c  swapchain.c  validation.c
cpp/: .clang-format  .gitignore  .gitmodules  alias.hpp  cglfw.hpp  cstd.cpp  cstd.hpp  cstr.hpp  csys.cpp  csys.hpp  cvk.cpp  cvk.hpp  cvulkan.hpp  entry.cpp  readme.md  vkp.nimble
cpp/cvk/: cfg.cpp  debug.cpp  device.cpp  instance.cpp  swapchain.cpp
cpp/src/: build.nim  vkp.cpp  vkp.hpp
nim/: entry.nim  nim.cfg  nvk.nim  nvk.nimble  nvulkan.nim  vulkan.nim
nim/hvk/: mvk.c
nim/nvk/: allocator.nim  cfg.nim  check.nim  core.nim  (+5 more)
rust/: Cargo.toml  entry.rs  gpu.rs
shd/: tri.buffered.frag  tri.buffered.vert  tri.frag  tri.indexed.frag  tri.indexed.vert  tri.vert
src/: cfg.nim  nimc.nim  types.nim  vulkan.nim
zig/: build.sh  c_api.zig  confy.nims  entry.zig  triangle.zig  zglfw.zig  zgpu.zig  zstd.zig  zsys.zig  zvk.zig  zvulkan.zig
(+106 files in other folders)
